# LLVM

./: CMakeLists.txt  CodeClipPlugin.cpp  CodeClipPlugin.h  MarcoConfig.txt  PragmaHandler.cpp  PragmaHandler.h  codeclip.sh  使用说明.txt  测试.txt
testfolder/: gc_hal_user_brush.c  gc_hal_user_shader.c
testfolder_copy/: gc_hal_user_bitmask.c  gc_hal_user_brush_cache.c  gc_hal_user_queue.c  gc_hal_user_statistics.c  test.c
